--- a/.github/workflows/helloworld.yaml
+++ b/.github/workflows/helloworld.yaml
@@ -2,6 +2,8 @@ name: Helloworld build
 
 on:
     workflow_dispatch:
+    push:
+        branches: [main]
     pull_request:
         branches: [main]
 
